icons in header done

--- a/sushi.html
+++ b/sushi.html
@@ -12,6 +12,26 @@
       <h2>BLUEPRINT</h2>
       <i class="fa fa-question-circle-o" aria-hidden="true"></i>
       <p>Responsive Full Width Tabs</p>
+
+      <div class="icons">
+        <div class="icon-circle">
+          <i class="fa fa-arrow-left" aria-hidden="true"></i>
+        </div>
+        <div class="icon-circle">
+          <i class="fa fa-arrow-right" aria-hidden="true"></i>
+        </div>
+        <div class="icon-circle">
+          <i class="fa fa-tint" aria-hidden="true"></i>
+        </div>
+        <div class="icon-circle">
+          <i class="fa fa-envelope-open-o" aria-hidden="true"></i>
+        </div>
+
+
+
+      </div>
+
+
     </header>
 
   </body>
