--- a/sushi.html
+++ b/sushi.html
@@ -12,7 +12,6 @@
       <h2>BLUEPRINT</h2>
       <i class="fa fa-question-circle-o" aria-hidden="true"></i>
       <p>Responsive Full Width Tabs</p>
-
       <div class="icons">
         <div class="icon-circle">
           <i class="fa fa-arrow-left" aria-hidden="true"></i>
@@ -30,9 +29,19 @@
 
 
       </div>
-
-
     </header>
+      <div class="navigation">
+        <nav>
+          <i class="fa fa-home" aria-hidden="true"></i>
+          <i class="fa fa-coffee" aria-hidden="true"></i>
+          <i class="fa fa-cutlery" aria-hidden="true"></i>
+          <i class="fa fa-beer" aria-hidden="true"></i>
+          <i class="fa fa-truck" aria-hidden="true"></i>
+
+        </nav>
+
+      </div>
+
 
   </body>
 </html>
