--- a/sushi.html
+++ b/sushi.html
@@ -32,11 +32,21 @@
     </header>
       <div class="navigation">
         <nav>
-          <i class="fa fa-home" aria-hidden="true"></i>
-          <i class="fa fa-coffee" aria-hidden="true"></i>
-          <i class="fa fa-cutlery" aria-hidden="true"></i>
-          <i class="fa fa-beer" aria-hidden="true"></i>
-          <i class="fa fa-truck" aria-hidden="true"></i>
+          <div class="nav-icons">
+            <i class="fa fa-home" aria-hidden="true"></i>
+          </div>
+          <div class="nav-icons">
+            <i class="fa fa-coffee" aria-hidden="true"></i>
+          </div>
+          <div class="nav-icons">
+            <i class="fa fa-cutlery" aria-hidden="true"></i>
+          </div>
+          <div class="nav-icons">
+            <i class="fa fa-beer" aria-hidden="true"></i>
+          </div>
+          <div class="nav-icons">
+            <i class="fa fa-truck" aria-hidden="true"></i>
+          </div>
 
         </nav>
 
