--- a/sushi.html
+++ b/sushi.html
@@ -51,6 +51,19 @@
         </nav>
 
       </div>
+      <main>
+        <div class="icon-img">
+          <i class="fa fa-lemon-o" aria-hidden="true"></i>
+        </div>
+        <div class="icon-img">
+          <i class="fa fa-bath" aria-hidden="true"></i>
+        </div>
+        <div class="icon-img">
+          <i class="fa fa-bug" aria-hidden="true"></i>
+        </div>
+        
+
+      </main>
 
 
   </body>
