image card complete

--- a/sushi.html
+++ b/sushi.html
@@ -30,6 +30,7 @@
 
       </div>
     </header>
+
       <div class="navigation">
         <nav>
           <div class="nav-icons">
@@ -51,19 +52,34 @@
         </nav>
 
       </div>
+
+
+
+
       <main>
-        <div class="icon-img">
-          <i class="fa fa-lemon-o" aria-hidden="true"></i>
-        </div>
-        <div class="icon-img">
-          <i class="fa fa-bath" aria-hidden="true"></i>
-        </div>
-        <div class="icon-img">
-          <i class="fa fa-bug" aria-hidden="true"></i>
-        </div>
-        
+        <div class="icons">
+          <div class="card">
+            <div class="icon-img">
+              <i class="fa fa-lemon-o" aria-hidden="true"></i>
+            </div>
+          </div>
+
+          <!-- <div class="icon-img">
+            <i class="fa fa-bath" aria-hidden="true"></i>
+          </div>
+          <div class="icon-img">
+            <i class="fa fa-bug" aria-hidden="true"></i> -->
+          </div>
+      </div>
+
 
       </main>
+
+
+
+
+
+
 
 
   </body>
