--- a/sushi.html
+++ b/sushi.html
@@ -63,12 +63,36 @@
               <i class="fa fa-lemon-o" aria-hidden="true"></i>
             </div>
           </div>
+          <div class="description">
+            <h1>Sushi Gumbo Beetroot</h1>
+            <p>Sushi gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato.</p>
+
+          </div>
+          <div class="card">
+            <div class="icon-img">
+              <i class="fa fa-bath" aria-hidden="true"></i>
+            </div>
+          </div>
+          <div class="description">
+            <h1>Pea Sprouts Fava Soup</h1>
+            <p>Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea.</p>
+
+          </div>
+          <div class="card">
+            <div class="icon-img">
+              <i class="fa fa-bug" aria-hidden="true"></i> -->
+            </div>
+          </div>
+          <div class="description">
+            <h1>Turnip Broccoli Sashimi</h1>
+            <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip.</p>
+
+          </div>
 
           <!-- <div class="icon-img">
             <i class="fa fa-bath" aria-hidden="true"></i>
           </div>
           <div class="icon-img">
-            <i class="fa fa-bug" aria-hidden="true"></i> -->
           </div>
       </div>
 
