footer complete, go back to nav icon

--- a/sushi.html
+++ b/sushi.html
@@ -88,17 +88,10 @@
             <p>Nori grape silver beet broccoli kombu beet greens fava bean potato quandong celery. Bunya nuts black-eyed pea prairie turnip leek lentil turnip greens parsnip.</p>
 
           </div>
-
-          <!-- <div class="icon-img">
-            <i class="fa fa-bath" aria-hidden="true"></i>
-          </div>
-          <div class="icon-img">
-          </div>
-      </div>
-
-
       </main>
-
+      <footer>
+        Food Shapes/Icons by <span class="artist">PsdBlast</span>
+      </footer>
 
 
 
